--- a/Проект.md
+++ b/Проект.md
@@ -1,4 +1,4 @@
-# Teamwork-Glaurung \r\n
+# Teamwork-Glaurung
 1.Описание на проект
 Проектът ще се състои в това да изградим сайт/платформа  за споделено пътуване. Всеки юзър ще може да публикува обява от къде до къде възнамерява да пътува, както и колко свободни места има. Обявата ще се реализира посредством форма с drop-down менюта (от – до град, които ще бъдат предварително зададени в базата данни). Ще има и поле „Други“, където ще може да се въвежда допълнителна информация, като изисквания, предпочитания и др. Трябва да има и поле за дата на пътуването. Всеки юзър може да се „присъединява“ към дадена обява, като това ще намаля броя на свободните места, които са обявени при създаването на обявата. Юзърът, който публикува обява не може да се включва към други обяви от други юзъри, ако съвпада времето на пътуването. В началната страница ще се виждат последните, или всички обяви. Посредством търсачка ще може да се филтрират пътуванията по определен маршрут. Ако един юзър няма регистрация, той ще може да разглежда обявите, без право да публикува обява, или да се join-ва към вече създадена.  Вече регистрираният (логнат) юзър ще може да създава обяви и/или да се включва към вече създадени. 
 
